# mcp-mirror

./: .env  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml  test.yml
docs/: DESIGN-1PAGER.md  DESIGN.md
docs/build-log/: 0001-project-bootstrap.md  0002-simulators-out-real-captures-in.md  0003-five-frameworks-real-captures.md  0004-cli-and-scorecard.md  0005-tests.md  0006-license-ci-version-dotenv.md  0007-1password-op-run-pattern.md  0008-arcade-source-oauth.md  0009-live-arcade-gateway-results.md  0010-layer2-behavioral-eval.md
docs/sample-runs/: arcade-mcp-mirror-gateway.json  arcade-mcp-mirror-gateway.txt
site/: data.json  index.html
src/mcp_mirror/: __init__.py  arcade_auth.py  capture.py  cli.py  diff.py  eval_cases.py  fixtures.py  llm_eval.py  scorecard.py  server.py  spec.py  types.py
tests/: test_capture.py  test_cli.py  test_diff.py  test_llm_eval.py
